# spoon

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README-zh.md  README.md
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.5.0-MILESTONE-AUDIT.md  v0.6.0-MILESTONE-AUDIT.md
spoon/: Cargo.toml
spoon-backend/: Cargo.toml  build.rs
spoon-backend/src/: archive.rs  context.rs  db.rs  download.rs  error.rs  event.rs  fsx.rs  gitx.rs  layout.rs  lib.rs  platform.rs  ports.rs  proxy.rs  status.rs  task.rs
spoon-backend/src/control_plane/: doctor_store.rs  journal_store.rs  lock_store.rs  migrations.rs  mod.rs  sqlite.rs
spoon-backend/src/control_plane/schema/: 0001_control_plane.sql  0002_msvc_control_plane.sql  0003_scoop_state_facets.sql  mod.rs
spoon-backend/src/domain/scoop/workflows/: planning.rs
spoon-backend/src/msvc/: cache.rs  common.rs  detect.rs  doctor.rs  execute.rs  manifest.rs  mod.rs  msi_extract.rs  official.rs  package_rules.rs  paths.rs  plan.rs  query.rs  rules.rs  state.rs  status.rs  validation.rs  wrappers.rs
spoon-backend/src/msvc/tests/: context.rs  mod.rs  official.rs  root.rs
spoon-backend/src/msvc/validate_templates/cpp/: hello.cpp
spoon-backend/src/msvc/validate_templates/rust/.cargo/: config.toml
spoon-backend/src/msvc/validate_templates/rust/native/: helper.c
spoon-backend/src/msvc/validate_templates/rust/src/: main.rs
spoon-backend/src/scoop/: actions.rs  buckets.rs  cache.rs  doctor.rs  extract.rs  info.rs  manifest.rs  mod.rs  models.rs  package_source.rs  paths.rs  planner.rs  ports.rs  projection.rs  query.rs
spoon-backend/src/scoop/_deprecated/: package_state.rs
spoon-backend/src/scoop/actions/: common.rs  install.rs  mod.rs  uninstall.rs
spoon-backend/src/scoop/buckets/: manifest.rs  mod.rs  models.rs  operations.rs  registry.rs  update.rs
spoon-backend/src/scoop/extract/: archive.rs  current.rs  materialize.rs  mod.rs
spoon-backend/src/scoop/host/: download.rs  execution.rs  helpers.rs  hooks.rs  integration.rs  mod.rs  persist.rs  runtime.rs  surface.rs
spoon-backend/src/scoop/host/surface/: activation.rs  environment.rs  mod.rs  reapply.rs  shims.rs  shortcuts.rs  validation.rs
spoon-backend/src/scoop/host/templates/: hook_prelude.j2.ps1
spoon-backend/src/scoop/lifecycle/: acquire.rs  integrate.rs  materialize.rs  mod.rs  persist.rs  planner.rs  reapply.rs  state.rs  surface.rs  uninstall.rs
spoon-backend/src/scoop/runtime/: actions.rs  download.rs  execution.rs  hooks.rs  integration.rs  mod.rs  persist.rs  surface.rs
spoon-backend/src/scoop/state/: mod.rs  model.rs  projections.rs  store.rs
spoon-backend/src/scoop/tests/: buckets.rs  cache.rs  contracts.rs  mod.rs  planner.rs  runtime.rs  state.rs
spoon-backend/src/tests/: context.rs  control_plane.rs  event.rs  fsx.rs  gitx.rs  mod.rs  platform.rs  proxy.rs  task.rs
spoon-backend/tests/: common.rs  gitx.rs  msvc_integration.rs  scoop_integration.rs
spoon-core/: Cargo.toml
spoon-core/src/: archive.rs  cancellation.rs  download.rs  error.rs  events.rs  formatting.rs  fsx.rs  gitx.rs  layout.rs  lib.rs  proxy.rs  tests.rs
spoon-msvc/: Cargo.toml
spoon-msvc/src/: cache.rs  common.rs  detect.rs  doctor.rs  lib.rs  manifest.rs  msi_extract.rs  official.rs  paths.rs  plan.rs  query.rs  rules.rs  state.rs  status.rs  types.rs  validation.rs  wrappers.rs
spoon-msvc/src/execute/: discover.rs  integrity.rs  mod.rs  pipeline.rs  validate.rs  workflow.rs
spoon-msvc/src/facts/: cache.rs  manifest.rs  mod.rs  package_rules.rs  rules.rs
spoon-msvc/src/platform/: mod.rs  msvc_cache_layout.rs  msvc_paths.rs  msvc_runtime.rs  proxy.rs
spoon-msvc/src/validate_templates/rust/: Cargo.toml  build.rs
spoon-scoop/: Cargo.toml
spoon-scoop/src/: bucket.rs  bucket_ops.rs  error.rs  helpers.rs  lib.rs  manifest.rs  ports.rs  queries.rs  response.rs  source.rs  state.rs  tests.rs  workflow.rs
spoon-scoop/src/core/: mod.rs  workflow.rs
spoon/src/: clipboard.rs  env.rs  formatting.rs  launcher.rs  lib.rs  main.rs  runtime.rs  settings.rs
spoon/src/actions/: format.rs  mod.rs  model.rs
spoon/src/actions/execute/: mod.rs  native.rs  scoop.rs
spoon/src/bridge/: mod.rs  msvc.rs  scoop.rs
spoon/src/cli/: args.rs  json.rs  messages.rs  mod.rs  output.rs  report.rs  response.rs  run.rs
spoon/src/config/: env.rs  io.rs  mod.rs  model.rs  paths.rs  state.rs
spoon/src/editor/: discovery.rs  launch.rs  manage.rs  mod.rs  model.rs  state.rs
spoon/src/logger/: mod.rs  settings.rs
spoon/src/logger/events/: app.rs  command.rs  config.rs  editor.rs  mod.rs  tui.rs
spoon/src/platform/: shell.rs
spoon/src/service/: cache.rs  mod.rs
spoon/src/service/msvc/: mod.rs  report.rs
spoon/src/service/scoop/: actions.rs  bucket.rs  mod.rs  report.rs  runtime.rs
spoon/src/status/: mod.rs  policy.rs  update.rs
spoon/src/status/discovery/: env.rs  mod.rs  probe.rs
spoon/src/tui/: animation.rs  background.rs  help.rs  layout.rs  mod.rs  state.rs  test_support.rs  theme.rs
spoon/src/tui/action_flow/: config.rs  editor_setup.rs  mod.rs  tools.rs
spoon/src/tui/keys/: mod.rs  modal.rs  navigation.rs  screens.rs
spoon/src/tui/render/: mod.rs  render_shared.rs
spoon/src/tui/render/render_modals/: confirm.rs  debug.rs  detail.rs  forms.rs  mod.rs  utility.rs
spoon/src/tui/render/render_pages/: config.rs  mod.rs  tools.rs
spoon/src/view/: config.rs  mod.rs
spoon/src/view/tools/: detail.rs  mod.rs  row.rs
spoon/tests/cli/: cli_flow.rs  config_flow.rs  json_flow.rs  msvc_flow.rs  scoop_flow.rs  scoop_runtime_flow.rs  status_backend_flow.rs
spoon/tests/common/: assertions.rs  cli.rs  constants.rs  env_guard.rs  fixtures.rs  mod.rs  scoop.rs  setup.rs  tui.rs  windows_env.rs
spoon/tests/tui/: tui_configure_flow.rs  tui_form_flow.rs  tui_msvc_download_flow.rs  tui_navigation_flow.rs  tui_output_modal_flow.rs  tui_scoop_action_flow.rs  tui_scoop_flow.rs  tui_selection_flow.rs  tui_table_render_flow.rs  tui_tool_detail_flow.rs
(+267 files in other folders)
