[package]
name = "spoon-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1"
cab = "0.6"
dirs = "6"
fs-err = "3"
gix = { version = "0.70", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "blocking-network-client", "blocking-http-transport-reqwest", "worktree-mutation"] }
msi = "0.8"
mslnk = "0.1.8"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-rusqlite = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
url = "2"
walkdir = "2"
which = "8"
zip = "2"

[dev-dependencies]
dotenvy = "0.15"
