[package]
name = "spoon-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1"
cab = "0.6"
dirs = "6"
fs-err = "3"
gix = { version = "0.81", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "blocking-network-client", "blocking-http-transport-reqwest", "worktree-mutation", "sha1"] }
msi = "0.10"
mslnk = "0.1.8"
reqwest = { version = "0.13", default-features = false }
rusqlite_migration = "2.3"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = "0.1"
url = "2"
walkdir = "2"
which = "8"
zip = "8"

[dev-dependencies]
dotenvy = "0.15"
