[package]
name = "spoon-msvc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1"
fs-err = "3"
reqwest = { version = "0.13", default-features = false }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spoon-core = { path = "../spoon-core" }
strum_macros = "0.26"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1"
walkdir = "2"
zip = "2"
msi = "0.10"
cab = "0.6"
which = "8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
