[package]
name = "spoon-scoop"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1"
home = "0.5"
reqwest = { version = "0.13", default-features = false }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spoon-core = { path = "../spoon-core" }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
