[package]
name = "spoon"
version = "0.1.0"
edition = "2024"

[dependencies]
spoon-backend = { path = "../spoon-backend" }
async-recursion = "1"
anyhow = "1"
arboard = "3"
base64 = "0.22"
bytesize = "2"
cab = "0.6"
clap = { version = "4", features = ["derive"] }
colored_json = "5"
crossterm = "0.29"
dirs = "6"
fs-err = "3"
fs_extra = "1.3"
humantime = "2"
indicatif = "0.18"
msi = "0.10"
mslnk = "0.1.8"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
toml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml_edit = "0.25"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
tui-logger = { version = "0.18.1", features = ["tracing-support"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.1", default-features = false, features = ["ratatui"] }
unicode-width = "0.2"
walkdir = "2"
which = "8"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]

[[test]]
name = "cli_flow"
path = "tests/cli/cli_flow.rs"

[[test]]
name = "config_flow"
path = "tests/cli/config_flow.rs"

[[test]]
name = "msvc_flow"
path = "tests/cli/msvc_flow.rs"

[[test]]
name = "scoop_flow"
path = "tests/cli/scoop_flow.rs"

[[test]]
name = "scoop_runtime_flow"
path = "tests/cli/scoop_runtime_flow.rs"

[[test]]
name = "json_flow"
path = "tests/cli/json_flow.rs"

[[test]]
name = "status_backend_flow"
path = "tests/cli/status_backend_flow.rs"

[[test]]
name = "tui_configure_flow"
path = "tests/tui/tui_configure_flow.rs"

[[test]]
name = "tui_form_flow"
path = "tests/tui/tui_form_flow.rs"

[[test]]
name = "tui_msvc_download_flow"
path = "tests/tui/tui_msvc_download_flow.rs"

[[test]]
name = "tui_navigation_flow"
path = "tests/tui/tui_navigation_flow.rs"

[[test]]
name = "tui_output_modal_flow"
path = "tests/tui/tui_output_modal_flow.rs"

[[test]]
name = "tui_scoop_action_flow"
path = "tests/tui/tui_scoop_action_flow.rs"

[[test]]
name = "tui_scoop_flow"
path = "tests/tui/tui_scoop_flow.rs"

[[test]]
name = "tui_selection_flow"
path = "tests/tui/tui_selection_flow.rs"

[[test]]
name = "tui_table_render_flow"
path = "tests/tui/tui_table_render_flow.rs"

[[test]]
name = "tui_tool_detail_flow"
path = "tests/tui/tui_tool_detail_flow.rs"
